--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,8 +3,15 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent" >
-    <ListView android:id="@+id/listView"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" />
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ajouter une liste"
+        android:onClick="showAddDomainDialog" />
 </LinearLayout>
 
