--- a/res/layout/domain.xml
+++ b/res/layout/domain.xml
@@ -2,11 +2,17 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/tvName"
+    <TextView 
+        android:id="@+id/domain_name"
+        android:paddingTop="6dip"
+        android:paddingBottom="6dip"
+        android:paddingLeft="6dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:focusable="false"
+        android:clickable="false"
     />
 </LinearLayout>
