--- a/res/layout/domains_main.xml
+++ b/res/layout/domains_main.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent" >
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/domains_listView"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1" />
