--- a/res/layout/task.xml
+++ b/res/layout/task.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <CheckBox android:id="@+id/task_name"
+    <TextView android:id="@+id/task_name"
+              android:focusable="false"
+              android:layout_width="0dip"
+              android:layout_weight="1"
+              android:layout_height="wrap_content"/>
+    <CheckBox android:id="@+id/task_check"
               android:focusable="false"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
