--- a/res/layout/tasks_main.xml
+++ b/res/layout/tasks_main.xml
@@ -3,11 +3,11 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent" >
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Retour"
-        android:onClick="handleReturnClick" />
+    <!--<Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Retour"
+    android:onClick="handleReturnClick" />-->
     <TextView
         android:id="@+id/tasks_title"
         android:layout_width="match_parent"
@@ -17,10 +17,5 @@
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1" />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ajouter une tâche"
-        android:onClick="showAddTaskDialog" />
 </LinearLayout>
 
