--- a/res/layout/domain.xml
+++ b/res/layout/domain.xml
@@ -3,15 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView 
+    android:layout_height="wrap_content"
+    android:background="#333333" >
+    <TextView        
+        android:gravity="center_vertical|left"
         android:id="@+id/domain_name"
-        android:paddingTop="6dip"
-        android:paddingBottom="6dip"
-        android:paddingLeft="6dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#DDDDDD"
+        android:textStyle="bold"
+        android:paddingLeft="10dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:focusable="false"
         android:clickable="false"
     />
