--- a/res/layout/domains_add.xml
+++ b/res/layout/domains_add.xml
@@ -3,10 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content" >
     <Button
+        android:layout_height="30dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:gravity="center_vertical|left"
+        android:background="#227722"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ajouter une liste"
+        android:text="Créer une liste..."
+        android:textStyle="bold"
         android:onClick="showAddDomainDialog" />
 </LinearLayout>
