--- a/res/layout/domains_main.xml
+++ b/res/layout/domains_main.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" >
+              android:layout_height="match_parent"
+              android:background="#111111" >
     <ListView
         android:id="@+id/domains_listView"
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_weight="1" />    
+        android:layout_weight="1"
+        android:padding="0dp" />    
 </LinearLayout>
 
