--- a/res/layout/task.xml
+++ b/res/layout/task.xml
@@ -3,14 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#EEEEEE">
     <TextView android:id="@+id/task_name"
+              android:gravity="center_vertical|left"
+              android:paddingLeft="10dp"
+              android:paddingTop="4dp"
+              android:paddingBottom="4dp"
+              android:textColor="#222222"
+              android:fontFamily="serif"
               android:focusable="false"
+              android:clickable="false"
               android:layout_width="0dip"
               android:layout_weight="1"
-              android:layout_height="wrap_content"/>
+              android:layout_height="35dp"/>
     <CheckBox android:id="@+id/task_check"
               android:focusable="false"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content"/>
+              android:layout_height="35dp"/>
 </LinearLayout>
