--- a/res/layout/tasks_add.xml
+++ b/res/layout/tasks_add.xml
@@ -3,10 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content" >
     <Button
+        android:paddingLeft="10dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:gravity="center_vertical|left"
+        android:background="#88FF88"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ajouter une tâche"
+        android:layout_height="35dp"
+        android:fontFamily="serif"
+        android:text="Créer une tâche..."
         android:onClick="showAddTaskDialog" />
 </LinearLayout>
