Amélioration du design

--- a/res/layout/task.xml
+++ b/res/layout/task.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:background="#EEEEEE">
     <TextView android:id="@+id/task_name"
+              android:textSize="15dp"
               android:gravity="center_vertical|left"
               android:paddingLeft="10dp"
               android:paddingTop="4dp"
