--- a/res/layout/domain.xml
+++ b/res/layout/domain.xml
@@ -9,12 +9,13 @@
         android:gravity="center_vertical|left"
         android:id="@+id/domain_name"
         android:textColor="#DDDDDD"
+        android:textSize="17dp"
         android:textStyle="bold"
         android:paddingLeft="10dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="35dp"
         android:focusable="false"
         android:clickable="false"
     />
