--- a/res/layout/domains_add.xml
+++ b/res/layout/domains_add.xml
@@ -5,13 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
     <Button
-        android:layout_height="30dp"
+        android:textColor="#DDDDDD"
+        android:layout_height="35dp"
         android:paddingLeft="10dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:gravity="center_vertical|left"
-        android:background="#227722"
+        android:background="#005500"
         android:layout_width="match_parent"
+        android:textSize="17dp"
         android:text="Créer une liste..."
         android:textStyle="bold"
         android:onClick="showAddDomainDialog" />
