--- a/res/layout/tasks_add.xml
+++ b/res/layout/tasks_add.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
     <Button
+        android:textSize="15dp"
         android:paddingLeft="10dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:gravity="center_vertical|left"
-        android:background="#88FF88"
+        android:background="#88EE88"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:fontFamily="serif"
