--- a/res/layout/tasks_main.xml
+++ b/res/layout/tasks_main.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent" 
-              android:background="#CCCCCC" >
+              android:background="#BBBBBB" >
     <!--<Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
