--- a/res/menu/tasks_options.xml
+++ b/res/menu/tasks_options.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item android:id="@+id/tasks_options_addTask"
-          android:title="Ajouter une tâche" />
+          android:title="Créer une tâche" />
     <item android:id="@+id/tasks_options_deleteAll"
           android:title="Supprimer tout" />
 
