Ajout de la progress bar

--- a/res/layout/domain.xml
+++ b/res/layout/domain.xml
@@ -5,18 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#333333" >
-    <TextView        
-        android:gravity="center_vertical|left"
-        android:id="@+id/domain_name"
-        android:textColor="#DDDDDD"
-        android:textSize="17dp"
-        android:textStyle="bold"
-        android:paddingLeft="10dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:focusable="false"
-        android:clickable="false"
+    <TextView android:id="@+id/domain_name"       
+              android:gravity="center_vertical|left"        
+              android:textColor="#DDDDDD"
+              android:textSize="17dp"
+              android:textStyle="bold"
+              android:paddingLeft="10dp"
+              android:paddingTop="4dp"
+              android:paddingBottom="4dp"
+              android:layout_width="match_parent"
+              android:layout_height="35dp"
+              android:focusable="false"
+              android:clickable="false"
     />
+    <ProgressBar android:id="@+id/domain_progress"
+                 style="?android:attr/progressBarStyleHorizontal"
+                 android:layout_width="match_parent"
+                 android:layout_height="3dp"
+                 android:layout_marginLeft="5dp"
+                 android:layout_marginRight="5dp"
+                 android:layout_marginBottom="2dp"    />
 </LinearLayout>
