--- a/res/layout/domains_main.xml
+++ b/res/layout/domains_main.xml
@@ -4,11 +4,10 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#111111" >
-    <ListView
-        android:id="@+id/domains_listView"
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        android:padding="0dp" />    
+    <ListView android:id="@+id/domains_listView"
+              android:layout_width="match_parent"
+              android:layout_height="0dip"
+              android:layout_weight="1"
+              android:padding="0dp" />    
 </LinearLayout>
 
