--- a/res/menu/domains_context.xml
+++ b/res/menu/domains_context.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item android:id="@+id/domains_context_rename"
-          android:title="Renommer" />
+          android:title="@string/rename" />
     <item android:id="@+id/domains_context_delete"
-          android:title="Supprimer" />
+          android:title="@string/delete" />
     
 </menu>
