--- a/res/menu/domains_options.xml
+++ b/res/menu/domains_options.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item android:id="@+id/domains_options_addDomain"
-          android:title="Créer une liste" />
+          android:title="@string/add_domain" />
     <item android:id="@+id/domains_options_deleteAll"
-          android:title="Supprimer tout" />
+          android:title="@string/delete_all" />
 
 </menu>
