--- a/res/menu/tasks_options.xml
+++ b/res/menu/tasks_options.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item android:id="@+id/tasks_options_addTask"
-          android:title="Créer une tâche" />
+          android:title="@string/add_task" />
     <item android:id="@+id/tasks_options_deleteAll"
-          android:title="Supprimer tout" />
+          android:title="@string/delete_all" />
 
 </menu>
